--- a/src/styles/companyCard.css
+++ b/src/styles/companyCard.css
@@ -7,6 +7,10 @@
   box-shadow: 0px 3px 4px 1px var(--background-details-color);
   overflow: hidden;
   position: relative;
+  transition: .3s ease;
+}
+.company-card:hover {
+  transform: scale(1.1);
 }
 .company-card img {
   width: 100%;
@@ -19,7 +23,7 @@
   position: absolute;
   inset: 0px;
   z-index: -1;
-  opacity: 1;
+  opacity: 0;
 }
 @media(min-width: 768px){
   .company-card {
