--- a/src/styles/movieCarrd.css
+++ b/src/styles/movieCarrd.css
@@ -4,10 +4,15 @@
   border: 1px solid grey;
   border-radius: 1rem;
   overflow: hidden;
+  transition: .3s ease;
 }
 .movie-card img {
   width: 100%;
   height: 100%;
+}
+.movie-card:hover {
+  border: 3px solid rgb(209, 209, 209);
+  transform: scale(1.05);
 }
 @media(min-width: 880px){
   .movie-card {
@@ -23,8 +28,5 @@
   .movie-card {
     transition: .3s ease;
   }
-  .movie-card:hover {
-    border: 3px solid rgb(209, 209, 209);
-    transform: scale(1.05);
-  }
+
 }
