--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,6 +11,7 @@ body {
 .home h3 {
   display: inline-block;
   padding: 0 1rem;
+  font-size: 2rem;
   font-weight: bold;
   text-transform: uppercase;
   color: aliceblue;
@@ -26,4 +27,9 @@ body {
   width: 80%;
   margin: 4rem auto;
   height: 4rem;
+}
+@media(min-width: 768px){
+  .home h3 {
+  font-size: 4rem;
+  }
 }
