--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -47,3 +47,8 @@
   padding-bottom: .5rem;
   border-bottom: 1px solid #e1e1e1;
 }
+@media(min-width: 768px) {
+  .movies-container {
+    margin-left: auto;
+  }
+}
