--- a/src/styles/movieDetails.css
+++ b/src/styles/movieDetails.css
@@ -39,6 +39,7 @@
   border-top: 1px solid gray;
   margin: 0 1rem;
   padding-top: .5rem;
+  margin-bottom: 5rem;
 }
 .hide-title-top {
   display: none;
